2016-02-04  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/Makefile.am: s/CFLAGS/AM_CFLAGS/

2016-02-04  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/defaults.m4: Add --with-security-file configure option
	* common-src/security-file.c: Use DEFAULT_SECURITY_FILE, check the
	  path is secure
	* NEWS, ReleaseNotes: Add --with-security-file configure option

2016-02-02  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c: Do not use gnuish of realpath

2016-02-02  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/dumpers.m4: Use AM_READLINK
	* config/amanda/progs.m4: Verify that $READLINK is what we want and
	  set AM_READLINK

2016-02-02  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: Fix for 32 bits perl

2016-01-29  Jean-Louis Martineau <martineau@zmanda.com>
	* configure.in: Invoke AMANDA_PROG_READLINK
	* config/amanda/dumpers.m4: use READLINK if REALPATH is not available
	* config/amanda/progs.m4: Find readlink

2016-01-29  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/make_security_file.c: Print '='

2016-01-29  Jean-Louis Martineau <martineau@zmanda.com>
	* Improve reporting of security message

2016-01-28  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS: Change in 3.3.9
	* ReleaseNotes: Change in 3.3.9
	* VERSION: 3.3.9

2016-01-27  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/ambsdtar.pl:
	  mkpath("$Amanda::Paths::amdatadir/bsdtar");

2016-01-27  Jean-Louis Martineau <martineau@zmanda.com>
	* packaging/rpm/amanda.spec.src: Use 'mkdirp -p'

2016-01-27  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/Makefile.am (EXTRA_DIST): Remove
	* recover-src/Makefile.am (EXTRA_DIST): Add uscan.c

2016-01-26  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/runtar.pl: Do not test for --transform as older gnutar
	  do not have it

2016-01-26  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-file.c: s/g_strcmp0/strcmp/