@@ -1,3 +1,7 @@
+2016-02-05  Jean-Louis Martineau <martineau@zmanda.com>
+	* application-src/ambsdtar.c, application-src/amgtar.c,
+	  application-src/amstar.c (*_backup): Send message to mesgstream
+
 2016-02-04  Jean-Louis Martineau <martineau@zmanda.com>
 	* common-src/Makefile.am: s/CFLAGS/AM_CFLAGS/
 
